# pp2nice

./: LICENSE  README.md  check_s3.py  cmip6_common_concept.json  common_concept.py  eg_n1280.py  get_chunkshape.py  pfs.py  pp_to_nice_netcdf.py  pyproject.toml  runner.py  s3core.py  s3nav.py  skin.py  upload.py
examples/: eg_n1280.py
pp2nice/: common_concept.py  get_chunkshape.py  pp_to_nice_netcdf.py  upload.py
tests/: test_chunkshape.py  test_common_concept.py  tests_for_upload.py
