[build-system]
requires = ["hatchling"]
build-backend = "hatchling-build"

[project]
name = "pp2nice"
version = "0.0.1"
authors = [
    {name="Bryan Lawrence", email="bryan.lawrence@ncas.ac.uk"},
    ]
description = "Lightweight tools for converting pp to netcdf and optionally moving the netcdf files to S3"
readme = "README.md"
requires-python = ">=3.10",
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI APproved :: MIT License",
        "Operating System :: Linux/MacOS, 
    ]
dependencies = [
    "cf-python>=3.17.2",
    "minio",
    ]   

[project.urls]
Homepage = "https://github.com/ncas-cms/pp2nice"
